Amaterasu, Ishtar, Susano-o

--- a/index.html
+++ b/index.html
@@ -1954,13 +1954,32 @@
                     <p>One of the best buffers in the game due to her unique skill Tenson Kourin being buffed, Tenson
                         Kourin has the same effect as Luster Candy but casts Dekunda beforehand so you'd always have 3
                         buffs on you. She also has really high magic for healing and magic damage.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Mediarahan). With her high magic attack, she'd naturally have high heals too. With
-                            that she makes a really good support/healing unit.</li>
-                        <li>Teal (Null Elec). You'd want to build her for damaging support instead as you'd get two
-                            free slots for magic skills.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Auto-Sukuka</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Trisagion</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Mediarahan</b> is a very good healing skill, with a reduced MP cost. Makes her a really good support/healing unit.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Magic Amp III</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Elec</b> covers her weakness, allowing you to build her in a more damaging support role, since you'd have two slots to customize.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Elec to cover weakness</li>
@@ -1979,12 +1998,33 @@
                         tag then Mesopotamian to hopefully one shot the enemy or weaken them enough to finish them off
                         the next turn/on the same turn. She comes with two weaknesses so there isn't that much
                         customization available.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Concentrate). Use with Templar Dragon to ensure you get as much damage as possible.</li>
-                        <li>Teal (Null Force). Gives you the freedom to customize another skill slot. If you got
-                            Concentrate from the skill gacha this would technically be a viable archetype.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Samarecarm</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Thunderclap</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Concentrate</b> allows her to work with Templar Dragon + Jack Bros strategies to nuke.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Tetraka Shift</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Force</b> covers a weakness and gives you the freedom to customize another skill slot. If you got
+                                            Concentrate from the skill gacha this would technically be a viable archetype.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Dark to cover her weakness</li>
@@ -2001,13 +2041,34 @@
                         bonus damage for single target skills), Mortal Jihad and Kusanagi. Kusanagi being his unique
                         skill fully boosted by Phys ATK and also casting Tarukaja when not hitting null/repel/drain
                         meaning you'd almost all of the time would have the damage buff active.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Clear (Strength Amp III) to further boost his damage. Boosting strength will increase
-                            Kusanagi damage and Mortal Jihad if the enemy is immune to force</li>
-                        <li>Teal (Drain Elec) When paired with Rama he can stop Cu Chulainn and Thor in their tracks as
-                            their pierce will have no effect on him.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Strength Amp III</b> will further boost his damage. Boosting strength will increase
+                                            Kusanagi damage and Mortal Jihad if the enemy is immune to force.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Bleeder</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO: <b>Charge</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Merciless Blow</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Drain Elec</b>, when paired with Rama, allows him to stop Cu Chulainn and Thor in their tracks as
+                                            their pierce will have no effect on him.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Fire to cover weakness</li>
