Nergal, BlackFrost, Cu, Quetz Guide Update

--- a/index.html
+++ b/index.html
@@ -2087,20 +2087,35 @@
                         a pierce effect. You'd use him to remove barriers first then inflict weak on enemies, once
                         they're weakened they can easily be poisoned which results in him getting Rebellion. You'd want
                         an aoe skill on him of course in order to sweep.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple can be decent with Auto Taraka and Strength Amp III, but you can always bring along
-                            other demons to Tarukaja your team anyways. There are a good amount of sources that come
-                            with it, and skills as well.</li>
-                        <li>Red (Hades Blast + Savage Glee). A -1mp Hades Blast is really nice on him and paired with
-                            Savage Glee, without Rebellion he is really likely to crit. This also removes the need to
-                            transfer an aoe onto him, so you can cover his weakness and either leave it at that or
-                            replace Savage Glee with whatever you like.</li>
-                        <li>Yellow (Toxic Sting + Auto-Sukuka). Toxic Sting naturally complements his passive. Assuming
-                            the enemy has no barriers, you can Toxic Sting them, poison them then have Rebellion casted
-                            on yourself and rinse and repeat. Auto-Sukuka helps in landing hits and increases evasion
-                            too so that's always a plus.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b></b><br><b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Hades Blast</b> is really good for damage. <br><b>Savage Glee</b> makes him a lot more likely to crit.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Toxic Sting</b> naturally complements his passive. Assuming
+                                            the enemy has no barriers, you can Toxic Sting them, poison them then have Rebellion casted
+                                            on yourself and rinse and repeat.<br><b>Auto-Sukuka</b> helps in landing hits and increases evasion
+                                            too so that's always a plus.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Auto-Taruka</b><br><b>Strength Amp III</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO: <b>Null Light</b><br><b>Resist Ice</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended Skills: </strong></p>
                     <ul>
                         <li>Resist Ice, cover his weakness. Or not if you want to maximise his damage potential</li>
@@ -2116,10 +2131,32 @@
                         also dark pierces). He comes with a unique Jaki trait passive Curse Of Anguish which reduces
                         damage taken from Cursed enemies and increases damage towards cursed enemies. He also has
                         Mabufudyne for ice sweeping too (but his main focus should be dark in all honesty).</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Concentrate). Charge up and deal heaps of damage, self explanatory</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Maragion</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Hell Gaze</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Concentrate</b> allows him to charge up and do heaps of damage.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Ice Amp</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO: <b>Null Fire</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Light to cover weakness</li>
@@ -2134,10 +2171,32 @@
                     <p>Recommended sweeper and first 5* demon to fuse in the game. With Force Pierce (Purple only) and
                         Mazandyne he can sweep any pve content like crazy (he's my main attacker in pvp too). He also
                         has no weaknesses so you get to mix and match a variety of skills.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple (Force Pierce). No question, nothing really compares to pierce</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Rebellion</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Killing Wind</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO: <b>Recarmdra</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Force Pierce</b> allows him to ignore resists with his Mazandyne.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO: <b>Repel Dark</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Force Boost to increase his damage further</li>
@@ -2159,10 +2218,32 @@
                         will try to cast it as soon as he sees at least one ally dead (so you can take advantage of the
                         AI in that regard). Mainly used for pvp and when paired with Alilat (and being Teal) he can
                         stop phys sweepers from taking down your team and bring them back to life when they fall too.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Teal (Repel Phys). Stops phys units.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Null Poison</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Mahamadyne</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO: <b>Concentrate</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Auto-Tarunda</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Repel Phys</b> allows him to deal with pesky Phys units, when paired with Alilat.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Dark, cover that weakness</li>
