--- a/index.html
+++ b/index.html
@@ -2274,25 +2274,42 @@
                         <li>Use Chalk Eater as your dx2, you'll still get buffs when you hit their weakness so you
                             don't have to bring a buffer unit. There's also the chance of getting extra press turns</li>
                     </ul>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red is quite bad to switch/shift archetype into (Mamudoon) as Orcus isn't really meant to
-                            be a dps (he has a meh magic stat anyways). Auto-Tarunda is a really good skill though, so
-                            if you pulled him as Red, i'd recommend switching to another archetype, keeping
-                            Auto-Tarunda.</li>
-                        <li>Purple can have its uses (Tetraka Shift + Hell Gaze), it can stop first turn phys, giving you
-                            one turn of breathing room, though in higher pvp people generally bring pierce phys demons
-                            anyhows. Hell Gaze is pretty bad using the same reasoning as Mamudoon.</li>
-                        <li>Yellow (Nocturne + Null Bind). Gives him another supporting skill to use to enhance your
-                            team's defense and evasion. Coupled with the Tarunda effect from War Cry, once both buffs
-                            are up you'll be taking quite miniscule aoe damage. Null Bind is okay, but can be replaced
-                            if you desire to do so.</li>
-                        <li>Teal (Null Phys + Vitality Amp III). Makes him immune to phys attacks which is really good
-                            in pve, in pvp it can have its uses as well for blocking damage from phys demons such as:
-                            Siegfried, Seth, Zhong Kui, Shiva (provided he doesn't Pralaya), Yoshitsune. When facing a
-                            Hell Biker team, you may be able to survive long enough for all 3 uses of Red Zone wear
-                            off, making him immune to their team, as they are oriented towards aoe phys.</li>
-                    </ul>
+                    <div id="DemonGuideTable">
+                            <p><table>
+                              <tbody>
+                                <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                    <td>TO DO: <b></b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                    <td><b>Mamudoon</b> is not too good for him since he's not good for Magic DPS. <br><b>Auto-Tarunda</b> is a really good skill though, so
+                                        if you pulled him as Red, i'd recommend switching to another archetype, keeping
+                                        Auto-Tarunda.</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                    <td><b>Nocturne</b> is another supporting skill to use to enhance your
+                                        team's defense and evasion. Coupled with the Tarunda effect from War Cry, once both buffs
+                                        are up you'll be taking quite miniscule aoe damage.<br><b>Null Bind</b> is only okay, you can replace it.</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                    <td><b>Tetraka Shift</b> can stop first turn phys, giving you
+                                        one turn of breathing room, though in higher pvp people generally bring pierce phys demons
+                                        anyhows.<br><b>Hell Gaze</b> is pretty bad using the same reasoning as Mamudoon.</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                    <td><b>Null Phys</b> makes him immune to phys attacks which is really good
+                                        in pve, in pvp it can have its uses as well for blocking damage from phys demons such as:
+                                        Siegfried, Seth, Zhong Kui, Shiva (provided he doesn't Pralaya), Yoshitsune. When facing a
+                                        Hell Biker team, you may be able to survive long enough for all 3 uses of Red Zone wear
+                                        off, making him immune to their team, as they are oriented towards aoe phys.<br><b>Vitality Amp III</b> can be replaced.</td>
+                                    <td></td>
+                                </tr>
+                              </tbody>
+                            </table></p>
+                          </div>
                     <p><strong>Recommended Skills: </strong></p>
                     <ul>
                         <li>Endure/Enduring Soul can ensure he stays alive</li>
@@ -2315,14 +2332,35 @@
                         Biker defense teams, with the highest agility in game + the bonus to evasion, he should be able
                         to easily dodge phys attacks. Take Yellow for Fog Breath and somehow get sukukaja onto your
                         team to ensure you won't get hit.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple (Berserker). +10% damage, +20% taken. He's going to die anyways so might as well
-                            boost his damage? You'd be aiming for sweeps.</li>
-                        <li>Yellow (Fog Breath). For the main purpose of increasing evasion against the more phys
-                            inclined teams. This reduces the chances of you being hit by dangerous phys demons such as
-                            Huang Di, Mara, Siegfried, etc. Wouldn't be so good against magic teams however.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Magic Amp III</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Maragidyne</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Fog Breath</b> is good for increasing evasion against the more phys
+                                            inclined teams. This reduces the chances of you being hit by dangerous phys demons such as
+                                            Huang Di, Mara, Siegfried, etc. Wouldn't be so good against magic teams however.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Berserker</b> gives +10% damage, +20% taken. He's going to die anyways so might as well
+                                            boost his damage? You'd be aiming for sweeps.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO: <b>Null Light</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Ice, optional though. On the one hand covering his weakness would prevent opponents
@@ -2341,10 +2379,32 @@
                         that does dark damage to all and has a 35% chance to charm, this would be pretty good if only
                         there weren't so many enemies immune to dark. Her pretty high luck means the charm would
                         probably stick if enemies are hit.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Teal (Null Light). Gotta cover her weakness.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Insanity</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO: <b>Mind Break</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO: <b>Samarecarm</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO: <b>Luck Amp III</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Light</b> covers one of her weaknesses</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Force, same reason as above.</li>
