Demon Guide: Updated Michael
- Updated Trumpeter with more recommended skills

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                 <!-- [Trumpeter] -->
                 <b-card>
                     <p><strong><a id="Trumpeter" href="javascript:void(0)" @click="show_guide_devil('Trumpeter')">Trumpeter</a></strong></p>
-                    <p>Has no weaknesses and Nulls Light/Dark, he Comes with Concentrate,
+                    <p>Has no weaknesses and Nulls Light/Dark, he comes with Concentrate,
                         Soul Drain and his unique skill Apocalypse (Almighty, hit all with chance to mute).
                         Given his toolkit he can be used as an alternative on the Jack Bros sweeping team (easier to
                         build compared to Ishtar, less expensive). People don't really run Memutudi as well so
@@ -872,12 +872,11 @@
                     <ul>
                         <li>Insanity/Madness. Increasing his chance of inflicting mute</li>
                         <li>Endure/Enduring Soul. Gives him more chances do the Concentrate + Apocalypse combo.</li>
+                        <li>Serial Killer/Butcher. Increases his Apocalypse damage.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine/Ward. Apocalypse is costly, so be sure to get divine so you
-                        can
-                        two turn use it. Maxing it out would help with mp cost but this setup will still be good
-                        for
-                        when you want to Concentrate + Apocalypse.
+                    <p><strong>Brands:</strong> Divine/Ward. Apocalypse is costly, so be sure to get divine so you can
+                        two turn use it. Maxing it out would help with mp cost but this brand setup would still be good for
+                        when you want to Concentrate then Apocalypse as soon as possible.
                     </p>
                 </b-card>
                 <!-- [Shiva] -->
@@ -986,38 +985,41 @@
                         <li>Resist Elec. The intention is that he'd survive as long as possible to keep Harmonius Death up.</li>
                     </ul>
                     <p><strong>Brands:</strong> Divine would be good due to his costly skills if you want him to
-                        two turn them. Life would work too if you don't really care about that and just want his
+                        two turn them. Life if you don't really care about that and just want his
                         hp to go as high as possible. Stack MAtk % if you want damage, Life% if you want survival.
                     </p>
                 </b-card>
                 <!-- [Michael] -->
                 <b-card>
                     <p><strong><a id="Michael" href="javascript:void(0)" @click="show_guide_devil('Michael')">Michael</a></strong></p>
-                    <p>Magic oriented demon (even though he has both equal magic and strength). Has the unique
-                        skill Soul Judgement which makes him a really good demon for Sloth 10 and Megidolaon for
-                        general sweeping.
+                    <p>Magic oriented demon (even though he has both equal magic and strength). Has the unique skill Soul Judgement (multiple hits, light) which makes him a 
+                       really good demon for Sloth 10, Megidolaon for general sweeping and Life Aid for healing in between waves making him an effective pve demon.
                     </p>
                     <div id="DemonGuideTable">
                       <p><table>
                         <tbody>
                           <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                              <td>TODO: <b>Endure</b></td>
-                              <td>TODO</td>
+                              <td><b>Endure</b> helps with his survivability. Purple would be better though as you can just transfer this skill (and it's relatively cheap).</td>
+                              <td>Bad</td>
                           </tr>
                           <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                              <td>TODO: <b>Thunderclap</b></td>
-                              <td>TODO</td>
+                              <td><b>Thunderclap</b> gives him a powerful single target light skill. In pvp this can be really useful for demons such as Hecatoncheires or in Black Frost Kiwami</td>
+                              <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                              <td><b>Mediarahan</b> can make him an effective healer due to his high magic (thouch only for manual play because his AI is Attack type)</td>
+                              <td><b>Mediarahan</b> can make him an effective healer due to his high magic (only for manual play because his AI is Attack type he will never use it on auto)</td>
                               <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                              <td>TODO:<b>Infernal Mask</b></td>
-                              <td>TODO</td>
+                              <td><b>Infernal Mask</b> increases his ailment resistance. He has pretty low luck so it can patch up his resistance to ailments. I wouldn't recommend him as a ailment 
+                                  clearer though (Kinmamon/Yellow Persephone is better for that role).
+                              </td>
+                              <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                              <td><b>Repel Dark</b> covers his weakness and when paired with Alilat you can ignore Black Frost's Go To Hell skill.</td>
+                              <td><b>Repel Dark</b> covers his weakness and when paired with Alilat you can ignore Black Frost's Go To Hell skill. This saves you a slot
+                                  in transfering resist dark and gives him immunity to 4 elements in total.
+                              </td>
                               <td><b>Best</b></td>
                           </tr>
                         </tbody>
@@ -1026,8 +1028,10 @@
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Dark. If not Teal to cover his weakness.</li>
+                        <li>Light Boost. To increase Soul Judgement's damage </li>
+                        <li>Serial Killer/Butcher. To increase both Soul Judgement and Megidolaon's damage </li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine type since he has expensive skills</p>
+                    <p><strong>Brands:</strong> Divine if you want two turn Megidolaon, Spell for Soul Judgement spam.</p>
                 </b-card>
                 <!-- [Mara] -->
                 <b-card>
